k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: swiggy-app-svc
spec:
  type: ClusterIP
  selector:
    app: swiggy-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
